--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Zhou Dongtao
 description: The universe is grand, but life is grander.
+subtitle: gallery
+keywords: books
